@@ -43,6 +43,9 @@ system is <a href="guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>.
 	<tt>testm88k</tt>; the reason for concentrating on this mode is to be able
 	to make an initial release of the new framework within a reasonable
 	time frame.
+	<p>There is also a (bogus) <tt>testmips</tt> machine which will be
+	implemented using the new framework. To use the old <tt>testmips</tt>
+	machine, please use the name <tt>oldtestmips</tt> instead.
 </ul>
 
 <p>In addition to the new framework, a couple of other changes are worth
