@@ -4439,3 +4439,5 @@ Changelog for GXemul:
 		Updating guest OS documentation (NetBSD/landisk 4.0.1 to
 		5.0.1, NetBSD/pmax 5.0 to 5.0.1, NetBSD/arc 5.0 to 5.0.1,
 		NetBSD/cobalt 5.0 to 5.0.1).
+		Renaming old testmips to oldtestmips, so that the name
+		testmips can be used by the new framework.
